<resources>
<!-- strings.xml
strings resource file for this Project
Created by: Spencer Miller
Created on: 2/24/18
Last Modified by: Spencer Miller
Last Modified on: 3/2/18
Assignment/Project: A290 Android Development Final Project
Part of: Math Facts Project
-->
    <string name="app_name">MathFacts</string>
    <string name="action_settings">Settings</string>
    <string name="btn_play">Play!</string>
    <string name="btn_settings">Settings</string>
    <string name="title">MATH FACTS!</string>
    <string name="title_activity_math_facts_settings">MathFactsSettingsActivity</string>
    <string name="radio_easy">Easy</string>
    <string name="radio_med">Medium</string>
    <string name="radio_hard">Hard</string>
    <string name="difficulty">Difficulty</string>
    <string name="operations">Operations</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="title_activity_math_facts_game">MathFactsGameActivity</string>


</resources>
