<?xml version="1.0" encoding="utf-8"?>

<!-- content_math_facts_settings.xml
Settings Layout file for this Project
Created by: Spencer Miller
Created on: 2/24/18
Last Modified by: Spencer Miller
Last Modified on: 3/2/18
Assignment/Project: A290 Android Development Final Project
Part of: Math Facts Project, refers to MathFactsSettingsActivity.java
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.indiana.spemille.mathfacts.MathFactsSettingsActivity"
    tools:showIn="@layout/activity_math_facts_settings">

    <TextView
        android:id="@+id/Settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/txt_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/difficulty"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="147dp"
        android:layout_height="158dp"
        android:layout_marginBottom="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_easy" />

        <RadioButton
            android:id="@+id/radio_med"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radio_med" />

        <RadioButton
            android:id="@+id/radio_hard"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_hard" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/add_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/addition"
        app:layout_constraintBottom_toTopOf="@+id/sub_check"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/mult_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toTopOf="@+id/div_check"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/div_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/operations"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/add_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/sub_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:checked="true"
        android:text="@string/subtraction"
        app:layout_constraintBottom_toTopOf="@+id/mult_check"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
